syntax = "proto3";

option csharp_namespace = "Secrets.Lib";

package greet;

service SecretService {
  rpc CreateSecret (CreateSecretMessage) returns (Response);
  rpc GetSecret(GetSecretMessage) returns (Response);
  rpc DeleteSecret(DeleteSecretMessage) returns (Response);
  rpc PutSecret(PutSecretMessage) returns (Response);
}

message CreateSecretMessage{
  string Id = 1;
  string SecretPart = 2;
}

message DeleteSecretMessage{
  string Id = 1;
}

message PutSecretMessage{
  string Id = 1;
  string SecretPart = 2;
}

message GetSecretMessage{
  string Id = 1;
  string SecretPart = 2;
}

message Response{
  string Message = 1;
}

